--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 		<tag>HEAD</tag>
 	</scm>
 
+	<repositories>
+		<repository>
+			<id>repo.eclipse.org</id>
+			<name>EGit Maven Repository - Releases</name>
+			<url>https://repo.eclipse.org/content/repositories/egit-releases/</url>
+		</repository>
+	</repositories>
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -65,6 +73,7 @@
 		<module>pitest-ant</module>
 		<module>pitest-command-line</module>
 		<module>pitest-html-report</module>
+		<module>pitest-github-report</module>
 		<module>pitest-aggregator</module>
 	</modules>
 
@@ -162,6 +171,11 @@
 			<artifactId>quickbuilder</artifactId>
 			<version>1.2</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.0.10.RELEASE</version>
 		</dependency>
 	</dependencies>
 
@@ -370,15 +384,32 @@
 		</plugins>
 	</build>
 
+<!--	<distributionManagement>-->
+<!--		<snapshotRepository>-->
+<!--			<id>ossrh</id>-->
+<!--			<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+<!--		</snapshotRepository>-->
+<!--		<repository>-->
+<!--			<id>ossrh</id>-->
+<!--			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
+<!--		</repository>-->
+<!--	</distributionManagement>-->
+
 	<distributionManagement>
-		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
+		<site>
+			<id>website</id>
+			<url>scp://technology.corelogic.net/apps/www</url>
+		</site>
 		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>int-las-releases</id>
+			<name>Global Corelogic Release Repository</name>
+			<url>http://technology.corelogic.net/artifactory/int-las-releases</url>
 		</repository>
+		<snapshotRepository>
+			<id>int-las-snapshot-releases</id>
+			<name>Global Corelogic Snapshots Repository</name>
+			<url>http://technology.corelogic.net/artifactory/int-las-snapshot-releases</url>
+		</snapshotRepository>
 	</distributionManagement>
 
 	<!-- versions of libraries which are used in different projects or which 
